# Nico_Making_Airbnb_with_Django

./: main.py  pyproject.toml
backend/: pyproject.toml  render.yaml  test.py
backend/bookings/: admin.py  serializers.py
backend/bookings/migrations/: 0001_initial.py
backend/categories/: models.py  post.txt  serializers.py  urls.py  views.py
backend/common/: permissions.py
backend/config/: settings.py  urls.py
backend/direct_messages/: admin.py  apps.py  models.py
backend/direct_messages/migrations/: 0001_initial.py
backend/experiences/: views.py
backend/experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py
backend/medias/: models.py  serializers.py  urls.py  views.py
backend/reviews/: admin.py  models.py  types.py
backend/reviews/migrations/: 0002_alter_review_experience_alter_review_room_and_more.py
backend/rooms/: admin.py  models.py  serializers.py  tests.py  types.py  untitled-1  urls.py  views.py
backend/rooms/migrations/: 0001_initial.py  0002_room_name.py  0005_alter_room_amenities_alter_room_category_and_more.py
backend/rooms/template/: all_rooms.html
backend/users/: admin.py  models.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
backend/wishlists/: admin.py  models.py  serializers.py  views.py
backend/wishlists/migrations/: 0001_initial.py
bookings/: models.py  serializers.py
categories/: admin.py  serializers.py  urls.py  views.py
common/: models.py
config/: authentication.py  schema.py  settings.py  urls.py
direct_messages/: models.py
medias/: urls.py  (+1 more)
(+60 files in other folders)
